[project]
name = "routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.3",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]
